// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`YearPicker Should contain value in updatedProperties 1`] = `
<body>
  <div>
    <input
      type="number"
      value="2021"
    />
  </div>
</body>
`;

exports[`YearPicker Should render date year 1`] = `
<div>
  <input
    type="number"
    value="2023"
  />
</div>
`;
